--- a/_posts/2019-10-15-mollaysa19a.md
+++ b/_posts/2019-10-15-mollaysa19a.md
@@ -1,23 +1,10 @@
 ---
 title: Learning to Augment with Feature Side-information
 crossref: acml19
-abstract: Multivariate time series prediction has recently attracted extensive research
-  attention due to its wide applications in the area of financial investment, energy
-  consumption, environmental pollution and so on. Because of the temporal complexity
-  and nonlinearity existing in multivariate time series, few existing models could
-  provide satisfactory prediction results. In this paper, we proposed a novel prediction
-  approach based on optimized temporal convolutional networks with stacked auto-encoders,
-  which can achieve better prediction performance as demonstrated in the experiments.
-  Stacked auto-encoders are employed to extract effective features from complex multivariate
-  time series. A temporal convolutional network is then constructed serving as the
-  prediction model, which has a flexible receptive field and enjoys faster training
-  speed with parallel computing ability than recurrent neural networks. The optimal
-  hyperparameters in these models are discovered by Bayesian optimization. We performed
-  extensive experiments by comparing the proposed algorithms and other popular algorithms
-  on three different datasets, where the proposed approach obtain the best prediction
-  results in various prediction horizons. In addition, we carefully analyze the search
-  process of Bayesian optimization and provide further insights into hyperparametric
-  tuning processes combining the exploration strategy with the exploitation strategy.
+abstract: Neural networks typically need huge amounts of data to train in order to get reasonable generalizable results. A common approach is to artificially generate samples by using prior knowledge of the data properties or other relevant domain knowledge. However, if the assumptions on the data properties are not accurate or the domain knowledge is irrelevant
+to the task at hand, one may end up degenerating learning performance by using such augmented data in comparison to simply training on the limited available dataset. We propose a critical data augmentation method using feature side-information, which is
+obtained from domain knowledge and provides detailed information about features' intrinsic properties. Most importantly, we introduce an instance wise quality checking procedure on the augmented data. It filters out irrelevant or harmful augmented data prior to entering the model. We validated this approach on both synthetic and real-world datasets,
+specifically in a scenario where the data augmentation is done based on a task independent, unreliable source of information. The experiments show that the introduced critical data augmentation scheme helps avoid performance degeneration resulting from incorporating wrong augmented data.
 layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: mollaysa19a
