Tidy up abstract lines for mollayasa

--- a/_posts/2019-10-15-mollaysa19a.md
+++ b/_posts/2019-10-15-mollaysa19a.md
@@ -1,10 +1,27 @@
 ---
 title: Learning to Augment with Feature Side-information
 crossref: acml19
-abstract: Neural networks typically need huge amounts of data to train in order to get reasonable generalizable results. A common approach is to artificially generate samples by using prior knowledge of the data properties or other relevant domain knowledge. However, if the assumptions on the data properties are not accurate or the domain knowledge is irrelevant
-to the task at hand, one may end up degenerating learning performance by using such augmented data in comparison to simply training on the limited available dataset. We propose a critical data augmentation method using feature side-information, which is
-obtained from domain knowledge and provides detailed information about features' intrinsic properties. Most importantly, we introduce an instance wise quality checking procedure on the augmented data. It filters out irrelevant or harmful augmented data prior to entering the model. We validated this approach on both synthetic and real-world datasets,
-specifically in a scenario where the data augmentation is done based on a task independent, unreliable source of information. The experiments show that the introduced critical data augmentation scheme helps avoid performance degeneration resulting from incorporating wrong augmented data.
+abstract: >
+    Neural networks typically need huge amounts of data to train in
+    order to get reasonable generalizable results. A common approach
+    is to artificially generate samples by using prior knowledge of
+    the data properties or other relevant domain knowledge. However,
+    if the assumptions on the data properties are not accurate or the
+    domain knowledge is irrelevant to the task at hand, one may end up
+    degenerating learning performance by using such augmented data in
+    comparison to simply training on the limited available dataset. We
+    propose a critical data augmentation method using feature
+    side-information, which is obtained from domain knowledge and
+    provides detailed information about features' intrinsic
+    properties. Most importantly, we introduce an instance wise
+    quality checking procedure on the augmented data. It filters out
+    irrelevant or harmful augmented data prior to entering the
+    model. We validated this approach on both synthetic and real-world
+    datasets, specifically in a scenario where the data augmentation
+    is done based on a task independent, unreliable source of
+    information. The experiments show that the introduced critical
+    data augmentation scheme helps avoid performance degeneration
+    resulting from incorporating wrong augmented data.
 layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: mollaysa19a
